--- a/LabSem3/Views/Complaint/Create.cshtml
+++ b/LabSem3/Views/Complaint/Create.cshtml
@@ -60,7 +60,7 @@
                 <div id="preview-image" class="row">
                     
                 </div>
-                <input class="form-control text-box single-line" data-val="true" data-val-required="Thumbnail Required" id="Thumbnail" name="Thumbnail" type="text" value="">
+                <input class="form-control text-box single-line" hidden data-val="true" data-val-required="Thumbnail Required" id="Thumbnail" name="Thumbnail" type="text" value="">
                 @*@Html.EditorFor(model => model.Thumbnail, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.Thumbnail, "", new { @class = "text-danger" })
             </div>
