--- a/LabSem3/Views/Complaint/Index.cshtml
+++ b/LabSem3/Views/Complaint/Index.cshtml
@@ -121,7 +121,10 @@
                 }
                 else
                 {
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+                    if (item.Supporter != null)
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+                    }
                     @Html.ActionLink("Details", "Details", new { id = item.Id })<span> | </span>
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 }
