--- a/LabSem3/Views/Complaint/Index.cshtml
+++ b/LabSem3/Views/Complaint/Index.cshtml
@@ -68,9 +68,9 @@
         <th>
             Title
         </th>
-        <th>
+        @*<th>
             Detail
-        </th>
+        </th>*@
         <th>
             Status
         </th>
@@ -92,9 +92,9 @@
             <td>
                 @item.Title
             </td>
-            <td>
+            @*<td>
                 @item.Detail
-            </td>
+            </td>*@
             <td>
                 @foreach (var item2 in EnumHelper.GetSelectList(typeof(LabSem3.Enum.ComplaintStatusEnum)))
                 {
@@ -123,7 +123,10 @@
                 {
                     if (item.Supporter != null)
                     {
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+                        if (item.Status != 3)
+                        {
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+                        }
                     }
                     @Html.ActionLink("Details", "Details", new { id = item.Id })<span> | </span>
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
