--- a/LabSem3/Views/Account/Delete.cshtml
+++ b/LabSem3/Views/Account/Delete.cshtml
@@ -19,17 +19,6 @@
                                 <tr>
                                     <td>
                                         <strong>
-                                            <span class="glyphicon glyphicon-asterisk text-primary"></span>
-                                            Id
-                                        </strong>
-                                    </td>
-                                    <td class="text-primary">
-                                        @Model.Id
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <strong>
                                             <span class="glyphicon glyphicon-user  text-primary"></span>
                                             Account
                                         </strong>
@@ -94,75 +83,6 @@
                                         @Model.Address
                                     </td>
                                 </tr>
-
-                                @if (User.IsInRole("HOD"))
-                                {
-                                    <tr>
-                                        <td>
-                                            <strong>
-                                                <span class="glyphicon glyphicon-eye-open text-primary"></span>
-                                                Department
-                                            </strong>
-                                        </td>
-                                        <td class="text-primary">
-                                            @Model.Department.Name
-                                        </td>
-                                    </tr>
-                                }
-                                <tr>
-                                    <td>
-                                        <strong>
-                                            <span class="glyphicon glyphicon-envelope text-primary"></span>
-                                            Status
-                                        </strong>
-                                    </td>
-                                    <td class="text-primary">
-                                        @foreach (var item in EnumHelper.GetSelectList(typeof(LabSem3.Enum.AccountStatusEnum)))
-                                        {
-                                            if (Model.Status == Int32.Parse(item.Value))
-                                            {
-                                                @item.Text
-                                            }
-                                        }
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <strong>
-                                            <span class="glyphicon glyphicon-calendar text-primary"></span>
-                                            Created At
-                                        </strong>
-                                    </td>
-                                    <td class="text-primary">
-
-                                        @string.Format("{0:dd/MM/yyyy hh:mm tt}", Model.CreatedAt)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <strong>
-                                            <span class="glyphicon glyphicon-calendar text-primary"></span>
-                                            Updated At
-                                        </strong>
-                                    </td>
-                                    <td class="text-primary">
-
-                                        @string.Format("{0:dd/MM/yyyy hh:mm tt}", Model.UpdatedAt)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <strong>
-                                            <span class="glyphicon glyphicon-calendar text-primary"></span>
-                                            Deleted At
-                                        </strong>
-                                    </td>
-                                    <td class="text-primary">
-
-                                        @string.Format("{0:dd/MM/yyyy hh:mm tt}", Model.DeletedAt)
-                                    </td>
-                                </tr>
-
                             </tbody>
                         </table>
                     </div>
@@ -175,7 +95,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Delete" class="btn btn-default" /> |
+            <input style="color:aliceblue;" type="submit" value="Delete" onclick="return confirm('Are you sure?')" class="btn btn-default bg-primary" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
