--- a/LabSem3/Views/Account/Create.cshtml
+++ b/LabSem3/Views/Account/Create.cshtml
@@ -76,7 +76,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Create" class="btn btn-default" />
+            <input style="color:aliceblue;" type="submit" value="Create" class="btn btn-default bg-primary" />
         </div>
     </div>
 </div>
