--- a/LabSem3/Views/Department/Create.cshtml
+++ b/LabSem3/Views/Department/Create.cshtml
@@ -46,7 +46,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+               <input style="color:aliceblue;" type="submit" value="Create" class="btn btn-default bg-primary" />
             </div>
         </div>
     </div>
