--- a/LabSem3/Views/Equipment/Delete.cshtml
+++ b/LabSem3/Views/Equipment/Delete.cshtml
@@ -131,7 +131,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Delete" class="btn btn-default" /> |
+            <inputstyle="color:aliceblue;" type="submit" value="Delete" onclick="return confirm('Are you sure?')" class="btn btn-default bg-primary" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
