--- a/LabSem3/Views/Schedule/Edit.cshtml
+++ b/LabSem3/Views/Schedule/Edit.cshtml
@@ -105,7 +105,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Save" class="btn btn-default" />
+                <input style="color:aliceblue;" type="submit" value="Save" class="btn btn-default bg-primary" />
             </div>
         </div>
     </div>
