--- a/LabSem3/Views/Complaint/Index.cshtml
+++ b/LabSem3/Views/Complaint/Index.cshtml
@@ -37,7 +37,8 @@
             <option @(ViewBag.statusCheck == -1 ? "selected" : " ") value="-1">Status...</option>
             @foreach (var item in EnumHelper.GetSelectList(typeof(LabSem3.Enum.ComplaintStatusEnum)))
             {
-                <option @(ViewBag.statusCheck == Int32.Parse(item.Value) ? "selected" : " ") value="@item.Value">@item.Text</option>
+                <option @(!User.IsInRole("ADMIN") && item.Text == "UNASSIGN" ? "hidden" : "" )  @(ViewBag.statusCheck == Int32.Parse(item.Value) ? "selected" : " ") value="@item.Value">@item.Text</option>
+                
             }
         </select>
         @if (User.IsInRole("ADMIN") || User.IsInRole("HOD"))
@@ -67,9 +68,9 @@
         <th>
             Title
         </th>
-        <th>
+        @*<th>
             Detail
-        </th>
+        </th>*@
         <th>
             Status
         </th>
@@ -91,9 +92,9 @@
             <td>
                 @item.Title
             </td>
-            <td>
+            @*<td>
                 @item.Detail
-            </td>
+            </td>*@
             <td>
                 @foreach (var item2 in EnumHelper.GetSelectList(typeof(LabSem3.Enum.ComplaintStatusEnum)))
                 {
@@ -120,7 +121,13 @@
                 }
                 else
                 {
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+                    if (item.Supporter != null)
+                    {
+                        if (item.Status != 3)
+                        {
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+                        }
+                    }
                     @Html.ActionLink("Details", "Details", new { id = item.Id })<span> | </span>
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 }
